--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -392,11 +392,11 @@ Length & Optimal Config & Baseline (t/s) & DynaTree (t/s) & Speedup & Accept. \\
 
 \subsection{Cross-Dataset Robustness}
 \label{dataset-robustness}
-To evaluate DynaTree's robustness across different text domains, we compare performance on two datasets with distinct characteristics: PG-19~\citep{rae2019compressive}, which contains long-form fiction with complex narrative structures and longer context dependencies, and WikiText-2~\citep{merity2016pointer}, a standard benchmark consisting of curated Wikipedia articles with more structured and factual content. Table~\ref{tab:dataset-comparison} and Figure~\ref{fig:dataset-comparison} present the results. Several observations emerge: (i)~All methods achieve higher absolute throughput on WikiText-2 compared to PG-19, likely due to WikiText's shorter, more predictable text patterns; (ii)~DynaTree maintains consistent speedup improvements across both datasets (1.32\(\times\) on PG-19, 1.39\(\times\) on WikiText-2 with D=6 configuration), demonstrating that multi-path exploration benefits transfer across domains; (iii)~The relative ordering of methods remains largely consistent, with DynaTree outperforming Linear Speculative Decoding on both datasets. These results confirm that DynaTree's design---parallel verification via tree attention combined with probability-based pruning---generalizes effectively to diverse text characteristics without requiring domain-specific tuning.
+To evaluate robustness across text domains, we compare performance on WikiText-2~\citep{merity2016pointer} (encyclopedic articles) and PG-19~\citep{rae2019compressive} (long-form fiction) using the same models and greedy decoding with \(T=1000\). Table~\ref{tab:dataset-comparison} and Figure~\ref{fig:dataset-comparison} summarize results. Across both datasets, tree-based speculation provides substantially higher throughput than linear chains by committing longer greedy-consistent prefixes per verification step. On PG-19, DynaTree remains competitive with the static-tree baseline while consistently outperforming linear speculative decoding, indicating that confidence-aware adaptation transfers beyond Wikipedia-style text.
 
 \begin{table}[t]
 \centering
-\caption{\textbf{Cross-dataset performance comparison (500-token generation).} We evaluate all methods on PG-19 (long-form fiction) and WikiText-2 (structured articles). DynaTree achieves consistent speedups across both datasets, demonstrating robustness to text domain and complexity variations. All methods show higher absolute throughput on WikiText-2 due to its shorter, more predictable patterns.}
+\caption{\textbf{Cross-dataset performance comparison (\(T=1000\)).} We compare AR, linear speculative decoding, a fixed-tree baseline, and DynaTree on WikiText-2 and PG-19. Values are mean throughput (t/s) with speedup relative to AR; both datasets use the same model pair and greedy decoding.}
 \label{tab:dataset-comparison}
 \begin{tabular}{lcccc}
 \toprule
@@ -404,11 +404,10 @@ To evaluate DynaTree's robustness across different text domains, we compare perf
 \cmidrule(lr){2-3} \cmidrule(lr){4-5}
 & Throughput (t/s) & Speedup & Throughput (t/s) & Speedup \\
 \midrule
-AR (target-only) & 126.0 & 1.00\(\times\) & 133.2 & 1.00\(\times\) \\
-Linear K=6 & 151.5 & 1.20\(\times\) & 167.7 & 1.26\(\times\) \\
-Linear K=7 & 150.7 & 1.20\(\times\) & 173.4 & 1.30\(\times\) \\
-\textbf{DynaTree D=6} & \textbf{165.7} & \textbf{1.32\(\times\)} & \textbf{185.3} & \textbf{1.39\(\times\)} \\
-DynaTree D=7 & 160.1 & 1.27\(\times\) & 184.5 & 1.39\(\times\) \\
+AR & 131.4 & 1.00\(\times\) & 135.6 & 1.00\(\times\) \\
+Linear Spec (\(K=5\)) & 153.3 & 1.17\(\times\) & 156.6 & 1.15\(\times\) \\
+Fixed Tree (\(D=5,B=2\)) & \textbf{179.1} & \textbf{1.36\(\times\)} & 191.9 & 1.41\(\times\) \\
+DynaTree & 176.5 & 1.34\(\times\) & \textbf{198.7} & \textbf{1.46\(\times\)} \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -416,7 +415,7 @@ DynaTree D=7 & 160.1 & 1.27\(\times\) & 184.5 & 1.39\(\times\) \\
 \begin{figure}[t]
   \centering
   \includegraphics[width=0.95\linewidth]{../figures/dataset_comparison.pdf}
-  \caption{\textbf{Cross-dataset performance comparison.} (a)~Absolute throughput comparison: all methods achieve higher throughput on WikiText-2 (terra cotta bars) compared to PG-19 (steel blue bars), reflecting WikiText's more predictable structure. (b)~Speedup comparison: DynaTree maintains consistent relative gains across both datasets (1.32--1.39\(\times\)), demonstrating that multi-path exploration benefits are robust to text domain variations. DynaTree consistently outperforms linear speculative methods on both datasets.}
+  \caption{\textbf{Cross-dataset performance comparison (\(T=1000\)).} (a)~Throughput and (b)~speedup on PG-19 and WikiText-2 for AR, linear speculative decoding, a fixed-tree baseline, and DynaTree.}
   \label{fig:dataset-comparison}
 \end{figure}
 
@@ -461,9 +460,11 @@ We introduced DynaTree, a tree-based speculative decoding framework that drafts 
 \label{app:exp-config}
 \paragraph{Common settings.}
 Unless stated otherwise, we use WikiText-2 prompts, truncate the prompt length to \(L_{\max}=800\), and generate \(T\) new tokens with greedy decoding. We evaluate \(N=10\) prompts and discard the first \(W=2\) runs as warmup.
+\paragraph{PG-19 cross-dataset setting.}
+For PG-19, we use the same model pair and greedy decoding, with a maximum prompt length \(L_{\max}=1000\).
 \paragraph{Fixed-tree baseline.}
 For the static-tree baseline, we use depth \(D=5\), branching factor \(B=2\), and a node budget \(N_{\max}=256\).
-\paragraph{Adaptive DynaTree (Phase~3).}
+\paragraph{DynaTree.}
 Unless stated otherwise, the adaptive configuration uses base depth \(D_0=5\), maximum depth \(D_{\max}=8\), branch bounds \((B_{\min},B_{\max})=(1,3)\), and confidence thresholds \((\tau_h,\tau_\ell)=(0.9,0.4)\).
 \section{Hyperparameter Sweep Details}
 \label{app:sweep}
